# pq2xpt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindReadStat.cmake
scripts/: R_performance.R  create_test_data.R  pqprint  readxpt.R  testing.sh
src/: arrow_basics.cpp  arrow_compute.cpp  conversion.cpp  main.cpp  main_read.cpp  playground.cpp  xpt_write.cpp
